--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -146,6 +146,13 @@
 	font-weight: bold;
 }
 
+video {
+	width: 75%;
+	height: 75%;
+	margin: 0;
+	padding: 0;
+}
+
 div a {
 	box-sizing: border-box;
 }
