--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -142,15 +142,15 @@
 }
 
 #taskPlannerTab, #alarmClockTab, #robotGameTab {
-	color: white;
+	/* color: white; */
 	font-weight: bold;
 }
 
 video {
-	width: 75%;
-	height: 75%;
-	margin: 0;
-	padding: 0;
+	width: 85%;
+	height: 85%;
+	/* margin: 0;
+	padding: 0; */
 }
 
 div a {
