--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -147,7 +147,7 @@
 	background-color: grey;
 }
 
-video, .info {
+video, .info , .links {
 	display: block;
 	margin: 0 auto;
 	width: 85%;
@@ -157,6 +157,11 @@ video, .info {
 .info {
 	color: white;
 	background-color: grey;
+	border:  solid grey;
+}
+
+.links {
+	background-color: rgb(58, 58, 58);
 }
 
 div a {
